# UFM-Data-Structures-HomeWork

./: .gitignore
Documentos/MAYBE_SPEC/: main.tex
Documentos/POMODORO/: main.aux  main.tex
HASHING/LATEX/: 5HASHINGALGORITHMS.aux  5HASHINGALGORITHMS.bbl  5HASHINGALGORITHMS.bcf  5HASHINGALGORITHMS.blg  5HASHINGALGORITHMS.run.xml  5HASHINGALGORITHMS.tex  hashing.bib
Lab2/: Dijkstra.py  Exchange.py
Tarea10DerivativeInJava/: pom.xml  testing.xml
Tarea10DerivativeInJava/video/: pow.mov
Tarea11BTreeSearch/: pom.xml  testng.xml
Tarea11BTreeSearch/VIDEO/: POW.mov
Tarea1EstructuraDeDatos/: .OLDgitignore
Tarea1EstructuraDeDatos/.OLDgit/: COMMIT_EDITMSG  FETCH_HEAD  config  index
Tarea1EstructuraDeDatos/Tarea1EstructuraDeDatos/: commonFunctions.h  main.c
Tarea1EstructuraDeDatos/Tarea1EstructuraDeDatos.xcodeproj/: project.pbxproj
Tarea3DynamicArray/Tarea3DynamicArray/: commonFunctions.h  main.cpp
Tarea3DynamicArray/Tarea3DynamicArray.xcodeproj/: project.pbxproj
Tarea3DynamicArrayInC/Tarea3DynamicArrayInC/: Stack.h  commonFunctions.h  main  main.c
Tarea3DynamicArrayInC/Tarea3DynamicArrayInC.xcodeproj/: project.pbxproj
Tarea3DynamicArrayInC/UnitTesting/: FirstTest  FirstTest.c  Stack.h  main  main.c
Tarea6CountLettersInPy/: Main.py
Tarea7AreaOfShape/: CMakeLists.txt
Tarea7AreaOfShape/src/main/: commonFunctions.c  commonFunctions.h  main.c  shape.c  shape.h
Tarea7AreaOfShape/src/test/: tests.c  tests.h
Tarea7Coordinates/: CMakeLists.txt
Tarea8SpotifyInC/: CMakeLists.txt
Tarea8SpotifyInC/src/: main.c  node.c  (+1 more)
Tarea9QueueInC/: CMakeLists.txt
(+82 files in other folders)
